# raydium-clmm

./: .gitignore  .gitmodules  Anchor.toml  Cargo.toml  README.md  SECURITY.md  client_config.ini  docker-compose.yml  log4rs.yaml  package-lock.json  package.json  tsconfig.json
.github/workflows/: audit.yml
anchor/idl/: amm_core.json
anchor/types/: amm_core.ts
client/: Cargo.toml  client_config.ini
client/src/: main.rs
client/src/instructions/: amm_instructions.rs  events_instructions_parse.rs  mod.rs  rpc.rs  token_instructions.rs  utils.rs
migrations/: deploy.ts
programs/amm/: Cargo.toml
programs/amm/src/: error.rs  lib.rs
programs/amm/src/instructions/: close_position.rs  collect_fee.rs  collect_remaining_rewards.rs  collect_rewards.rs  create_customizable_pool.rs  create_observation.rs  create_pool.rs  create_pool_v2.rs  create_tickarray_bitmap_extension.rs  decrease_liquidity.rs  decrease_liquidity_v2.rs  increase_liquidity.rs  increase_liquidity_v2.rs  initialize_reward.rs  lock_liquidity.rs  lock_liquidity_forever.rs  lock_position.rs  mod.rs  open_position.rs  open_position_v2.rs  open_position_with_token22_nft.rs  open_position_with_token_extensions.rs  remove_low_volume_liquidity.rs  resize_observation.rs  set_reward_params.rs  swap.rs  swap_internal.rs  swap_router_base_in.rs  swap_v2.rs  update_personal_rewards.rs  update_reward_info.rs
programs/amm/src/instructions/admin/: chickum_dinners.rs  close_personal_position.rs  close_pool.rs  close_protocol_position.rs  close_tick_array.rs  collect_fund_fee.rs  collect_protocol_fee.rs  collect_remaining_rewards.rs  create_amm_config.rs  create_dynamic_fee_config.rs  create_operation_account.rs  create_support_mint_associated.rs  initialize_reward.rs  mod.rs  modify_pool.rs  remove_low_volume_liquidity.rs  reset_sqrt_price.rs  set_new_owner.rs  set_protocol_fee_rate.rs  set_remove_liquidity.rs  set_reward_emissions.rs  set_reward_params.rs  transfer_reward_owner.rs  update_amm_config.rs  update_dynamic_fee_config.rs  update_operation_account.rs  update_pool_status.rs  update_tick.rs
programs/amm/src/instructions/limit_order/: close_limit_order.rs  decrease_limit_order.rs  increase_limit_order.rs  mod.rs  open_limit_order.rs  settle_limit_order.rs
programs/amm/src/libraries/: README.md  big_num.rs  fixed_point_64.rs  full_math.rs  liquidity_amounts.rs  liquidity_math.rs  mod.rs  sqrt_price_math.rs  swap_math.rs  test_utils.rs  tick_array_bit_map.rs  tick_math.rs  unsafe_math.rs
programs/amm/src/states/: config.rs  dynamic_fee_config.rs  limit_order.rs  limit_order_nonce.rs  locked_position.rs  mod.rs  operation_account.rs  oracle.rs  personal_position.rs  pool.rs  pool_fee.rs  protocol_position.rs  support_mint_associated.rs  tick.rs  tick_array.rs  tickarray_bitmap_extension.rs
programs/amm/src/util/: access_control.rs  account_load.rs  mod.rs  system.rs  token.rs
programs/core/: Cargo.toml
programs/core/src/: access_control.rs  context.rs  error.rs  lib.rs
programs/core/src/instructions/: add_metaplex_metadata.rs  burn.rs  close_position.rs  close_tick_account.rs  collect.rs  collect_fee.rs  collect_from_tokenized.rs  collect_protocol.rs  collect_protocol_fee.rs  collect_reward.rs  collect_rewards.rs  create_amm_config.rs  create_bitmap_account.rs  create_fee_account.rs  create_personal_position.rs  create_pool.rs  create_position.rs  create_protocol_position.rs  create_tick_account.rs  create_tokenized_position.rs  decrease_liquidity.rs  enable_fee_amount.rs  exact_input.rs  exact_input_internal.rs  exact_input_single.rs  increase_liquidity.rs  increase_observation.rs  init_bitmap_account.rs  init_factory.rs  init_position_account.rs  init_tick_account.rs  initialize_reward.rs  mint.rs  mint_tokenized_position.rs  mod.rs  open_position.rs  personal_position_metadata.rs  reset_sqrt_price.rs  set_fee_protocol.rs  set_new_owner.rs  (+10 more)
programs/core/src/instructions/admin/: collect_protocol_fee.rs  create_amm_config.rs  create_fee_account.rs  initialize_reward.rs  mod.rs  reset_sqrt_price.rs  set_new_owner.rs  set_protocol_fee_rate.rs
programs/core/src/libraries/: big_num.rs  bit_math.rs  fixed_point_32.rs  fixed_point_64.rs  full_math.rs  liquidity_amounts.rs  liquidity_math.rs  mod.rs  sqrt_price_math.rs  swap_math.rs  tick_math.rs
programs/core/src/states/: config.rs  factory.rs  fee.rs  mod.rs  oracle.rs  personal_position.rs  pool.rs  position.rs  position_manager.rs  swap_router.rs  tick.rs  tick_bitmap.rs  tokenized_position.rs
programs/core/src/util/: mod.rs  system.rs  token.rs
scripts/: 1-init-factory.ts  2-create-fee-tiers.ts  3-create-tokens-and-faucet.ts  4-airdrop-to-wallet.ts  5-create-pool.ts  6-locker-setup.ts  7-read-tick-state.ts  8-read-user-positions.ts  README.md
sdk/: README.md  all-in-one-example.ts  all-in-one.ts  devnet_demo.ts  package.json  script.sh  tsconfig.json
sdk/anchor/: amm_v3.json  amm_v3.ts
sdk/base/: context.ts  index.ts
sdk/entities/: cacheProvider.ts  fee.ts  index.ts  tickArray.test.ts  tickArray.ts
sdk/instructions/: closePosition.ts  collectFee.ts  collectRewards.ts  createPool.ts  decreaseLiquidity.ts  increaseLiquidity.ts  index.ts  instruction.ts  instructionHelper.ts  openPosition.ts  swap.ts  swapRouterBaseIn.ts  updateRewardInfo.ts
sdk/math/: constants.ts  index.ts  liquidityMath.ts  math.test.ts  math.ts  mathUtil.test.ts  mathUtil.ts  sqrtPriceMath.ts  swapMath.ts  tickMath.ts
sdk/pool/: cacheProviderImpl.ts  configCache.ts  index.ts  pool.ts
sdk/position/: index.ts  position.ts
sdk/scripts/: config.ts  create-amm-config.ts  create-pool.ts  createAmmConfig.ts  createPool.ts  createTokenMintAndAirdrop.ts  (+11 more)
switchboard_functions/savings_game/: Cargo.toml  Dockerfile
switchboard_functions/savings_game/src/: main.rs
tests/: SolanaTickDataProvider.ts  admin-keypair.json  amm-core.ts  computeSwapStep.ts  constants.ts  cyclos-core.ts  decrease-limit-order.test.ts  increase-limit-order.test.ts  keypair.json  open-limit-order.test.ts  settle-limit-order.test.ts  swap-compute-units.ts  swap-live-pool.ts  swap.test.ts  utils.ts
(+94 files in other folders)
