[workspace]
members = [
    "programs/*",
    # "client",
]

[profile.test]
opt-level = 0

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "0109f4a3cf4117570f627e3ae465b6247d504f69" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "0109f4a3cf4117570f627e3ae465b6247d504f69" }
