[workspace]
members = [
    "programs/*",
    # "client",
]

[profile.test]
opt-level = 0

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "16e166cae1b92e1e096794e2213c5bceb9df2288" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "16e166cae1b92e1e096794e2213c5bceb9df2288" }
