[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
mpl-token-metadata = { version = "=5.1.2-alpha.2" }
anchor-client = "1.0.2"
anchor-lang = "1.0.2"
raydium-clmm = { path = "../programs/amm", features = [
    "no-entrypoint",
    "client",
] }
solana-sdk = "3"
solana-client = "3"
solana-account-decoder = "3"
solana-transaction-status = "3"
spl-token = { version = "9.0", features = ["no-entrypoint"] }
spl-token-client = "0.19"
spl-memo = "7.0"
spl-associated-token-account = { version = "8.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "11.0", features = ["no-entrypoint"] }
# Solana 3.0 split these out of solana-sdk into standalone crates.
solana-system-interface = { version = "3.2", features = ["bincode"] }
solana-commitment-config = "3"
solana-compute-budget-interface = "3"
# five8 1.0.0 pulls five8_core 0.1.2, whose `impl Error for DecodeError` is
# gated behind an off-by-default `std` feature; solana-signature/solana-keypair
# need that impl. Force the feature on via unification.
five8_core = { version = "0.1.2", features = ["std"] }
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.32"
rand = "0.9.0"
hex = "0.4.3"
configparser = "3.0.0"
serde_json = { version = "1.0.78" }
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3.7"
bs58 = { version = "0.5.0" }
bincode = { version = "1.3.3" }
regex = "1"
colorful = "0.3.2"
base64 = "0.21.0"
